tests/correct/assign_target_list.ast.proc
(module 0
    (assign 1
        (list_display 1
            (id 1 a)
            (id 1 b))
        (list_display 1
            (int_literal 1 1)
