tests/error/binop.ast.proc
(module 0
    (binop 1
        (id 1 a)
        (id 1 +)
        (int_literal 1 5))
